# lrr-ros

./: .gitattributes  README.md
.devcontainer/: devcontainer.json
docker/: docker-compose.yml  ros_workspace.Dockerfile
little_red_rover/: CMakeLists.txt  package.xml  setup.py
little_red_rover/description/rover/: lidar_motor.part  lidar_top.part  motor_attachment_shim.part  motor_mount_shim.part  motor_mount_shim.stl  pcb.part  robot.urdf  robot_body_visual.stl  skid.part  tt_motor_3777_v10.part  tt_motor_mount.part  wheel.part  wheel.stl  wheel_2_visual.stl  wheel_left.stl  wheel_right.stl  wheel_right_visual.stl  wheel_visual.stl
little_red_rover/launch/: base.launch  hardware.launch  lrr.launch  teleop.launch  visualize.launch
little_red_rover/little_red_rover/: hal.py  old_hal.py
little_red_rover/little_red_rover/pb/: messages.proto  messages_pb2.py  messages_pb2.pyi
src/little_red_rover/: CMakeLists.txt  package.xml  setup.py
src/little_red_rover/config/: joy_config.yaml  slam_toolbox.yaml
src/little_red_rover/launch/: lrr.launch
src/little_red_rover/little_red_rover/: hal.py  odometry_publisher.py
tools/: wifi_auth.bash
