<?xml version="1.0"?>
<package format="2">
    <name>little_red_rover</name>
    <version>0.0.0</version>
    <description>The little_red_rover package</description>

    <maintainer email="michael@michael-crum.com">Michael Crum</maintainer>
    <url type="website">https://little-red-rover.com</url>
    <author email="michael@michael-crum.com">Michael Crum</author>

    <license>LGPLv2.1</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_export_depend>rospy</build_export_depend>

    <exec_depend>rospy</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>nav_msgs</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>xacro</exec_depend>
	<exec_depend>teleop_twist_joy</exec_depend>
	<exec_depend>slam_toolbox</exec_depend>
    <exec_depend>robot_localization</exec_depend>
	<exec_depend>foxglove_bridge</exec_depend>

    <export>
    </export>
</package>
